build contact form component

--- a/themes/artistsite/pages/contact.htm
+++ b/themes/artistsite/pages/contact.htm
@@ -2,5 +2,12 @@ title = "contact"
 url = "/contact"
 layout = "base-wide"
 is_hidden = 0
+
+[contactform]
 ==
-{% content 'contact' %}
+<div class="banner">
+    Contact Form
+</div>
+<div id="cts-mainContent">
+{% component 'contactform' %}
+</div>
