--- a/themes/artistsite/pages/home.htm
+++ b/themes/artistsite/pages/home.htm
@@ -8,10 +8,10 @@ is_hidden = 0
 <div class="welcomeContainer">
 	<h1>Musician | Developer</h1>
 <div>
-	<a href="{{ navlinks.artistsites }}">Get Started &#8594</a>
-	<!--<a href="{{ navlinks.github }}">github</a>
-	<a href="{{ navlinks.about }}">about</a>
-	<a href="{{ navlinks.contact }}">contact</a>--!>
+	<!--<a href="{{ navlinks.artistsites }}">Get Started &#8594</a>-->
+	<a href="{{ navlinks.github }}">free code</a>
+	<a href="{{ navlinks.artistsites }}">web design</a>
+	<a href="{{ navlinks.contact }}">get in touch</a>
 </div>
 	<br>
 	<ul> 
