complete first draft of events plugin

--- a/themes/artistsite/pages/testsched.htm
+++ b/themes/artistsite/pages/testsched.htm
@@ -3,32 +3,12 @@ url = "/testsched"
 layout = "base-wide"
 is_hidden = 0
 
-[displayevents]
+[CamSexton\Events\Components\UpcomingEvents upcomingevents]
+
+[CamSexton\Events\Components\PastEvents pastevents]
 ==
-{% component 'displayevents' %}
-
-{{ dump(displayevents) }}
 <h1>Upcoming Events</h1>
-<ul>
-{% for event in displayevents.upcomingEvents %}
-<li style="padding: 15px; margin: 10px; background: rgba(0,0,0,0.5); color: white">
-    <div>{{ event.title }}</div>
-    <div>{{ event.datetime }}</div>
-    <div>{{ event.venue }}</div>
-    <div>{{ event.description | raw}}</div>
+{% component 'upcomingevents' %}
+<h2>Old Events</h2>
 
-</li>
-{% endfor %}
-</ul>
-<h1>Past Events</h1>
-<ul>
-{% for event in displayevents.pastEvents %}
-<li style="padding: 15px; margin: 10px; background: rgba(0,0,0,0.5); color: white">
-    <div>{{ event.title }}</div>
-    <div>{{ event.datetime }}</div>
-    <div>{{ event.venue }}</div>
-    <div>{{ event.description | raw}}</div>
-
-</li>
-{% endfor %}
-</ul>
+{% component 'pastevents' %}
