--- a/themes/artistsite/pages/schedule.htm
+++ b/themes/artistsite/pages/schedule.htm
@@ -3,9 +3,9 @@ url = "/schedule"
 layout = "base-wide"
 is_hidden = 0
 
-[CamSexton\Events\Components\UpcomingEvents upcomingevents]
+[upcomingevents]
 
-[CamSexton\Events\Components\PastEvents pastevents]
+[pastevents]
 ==
 <div class="banner">
 	Upcoming Events
