restructure css - media page

--- a/themes/artistsite/content/instruments.htm
+++ b/themes/artistsite/content/instruments.htm
@@ -1,7 +1,7 @@
-<div id="cts-pageTitle">
+<div>
 	Software-Based Musical Instruments
 </div>
-<div id="cts-mainContent">
+<div>
 	In 2017 I wrote a research thesis on <i>Interface Mapping Techniques</i> for software based musical instruments. You can read it <a href="./assets/cts_pushtouchtwist.pdf">here</a>.
 	<br>
 	I've built these musical instruments:
