--- a/themes/artistsite/content/web.htm
+++ b/themes/artistsite/content/web.htm
@@ -1,4 +1,4 @@
-<div id="cts-pageTitle">
+<div>
 	Easy Websites for Busy Artists
 </div>
 <div class="container container-fullWidth container-vertical">
