--- a/themes/artistsite/pages/contact.htm
+++ b/themes/artistsite/pages/contact.htm
@@ -8,6 +8,6 @@ is_hidden = 0
 <div class="banner">
     Contact Form
 </div>
-<div id="cts-mainContent">
+<div>
 {% component 'contactform' %}
 </div>
