--- a/themes/artistsite/content/linuxaudio.htm
+++ b/themes/artistsite/content/linuxaudio.htm
@@ -1,8 +1,8 @@
-<div id="cts-pageTitle">
+<div>
     Pro Audio on Linux - Tips
 </div>
 
-<div id="cts-mainContent">
+<div>
     
 	<p>
 	I've recently moved to a Linux based environment for my music production work and I wanted to write something about my experiences on this path. 
