--- a/themes/artistsite/pages/about.htm
+++ b/themes/artistsite/pages/about.htm
@@ -3,4 +3,110 @@ url = "/about"
 layout = "base-wide"
 is_hidden = 0
 ==
-{% content 'about' %}
+<div class="img-span">
+	<img src="storage/app/media/Surface-0023_LRes.jpg" class="img-span-img" />
+</div>
+<div class="top-layer">
+	<div class="banner">
+		How I Work
+	</div>
+	<div class="container container-horizontal">
+		<div class="item sticky">
+			<div class="item-title">Audio Engineer</div>
+			<div class="item-details">
+				<ul>
+					<li>Pure Data</li>
+					<li>Max/MSP</li>
+					<li>SuperCollider</li>
+					<li>Ableton Live</li>
+					<li>Ardour</li>
+					<li>Pro Tools</li>
+				</ul>
+			</div>
+		</div>
+		<div class="item sticky">
+			<div class="item-title">Web Developer</div>
+			<div class="item-details">
+				<ul>
+					<li>HTML</li>
+					<li>Sass</li>
+					<li>Javascript</li>
+					<li>PHP</li>
+					<li>OctoberCMS</li>
+					<li>Twig</li>
+					<li>SQL</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div class="banner">
+		Projects
+	</div>
+	<div class="container container-horizontal">
+		<div class="item sticky">
+			<div class="item-title">Polyphonic Harmonizer</div>
+			<div class="item-subtitle">#Pure Data #SuperCollider</div>
+			<div class="item-details">
+				<i>'The Sextone'</i> - realtime, polyphonic harmonizer keyboard. Transpose incoming audio from any sound source - voice, strings, clarinet, piano, etc. Based on Miller Puckette's [sigmund~] object, the 20 strongest partials of the audio are tracked in Pd and fed to SuperCollider for transposition and resynthesis.
+			</div>
+		</div>
+		<div class="item sticky">
+			<div class="item-title">Electric Sheep Textural Synthesizer</div>
+			<div class="item-subtitle">#Max #Novation Launchpad #MIDI Fighter Twister</div>
+			<div class="item-details">
+				This was my project during my Honours year at Monash University. Generate sustained, evolving textural sounds and save 'memories' to grid buttons for easy recall and interpolation.
+			</div>
+		</div>
+		<div class="item sticky item-wide">
+			<div class="item-title">Open Source Busking Rig</div>
+			<div class="item-subtitle">#Pure Data #ZynAddSubFX #JACK</div>
+			<div class="item-details">
+				I built a portable busking system for pop-up performances on city streets with electronic act DISCOJESUS. Uses all free & open-source software, running glitch-free on a very old (i.e. replaceable) laptop. We have a reliable and cheap system that allows us to quickly set up and perform in all kinds of spaces.
+			</div>
+		</div>
+	</div>
+	<div class="banner">
+		Education
+	</div>
+	<div class="container container-horizontal">
+		<div class="item sticky">
+			<div class="item-title">Bachelor of Creative Music Technology (Honours Year)</div>
+			<div class="item-subtitle">
+				Monash University, Australia
+			</div>
+			<div class="item-details">
+				<i>Ernst Morawetz Prize for Best Honours Student in Ethnomusicology & Musicology</i><br><br>
+				Research thesis:<br>
+				<b>Push, Twist & Touch:</b> Mapping Systems for Live Performance
+			</div>
+		</div>
+		<div class="item sticky">
+			<div class="item-title">CS50x: Introduction to Computer Science</div>
+			<div class="item-subtitle">
+				Harvard University via EdX Online 
+			</div>
+			<div class="item-details">
+				Studied the fundamentals of C, Python, SQL & Javascript.
+			</div>
+		</div>
+		<div class="item sticky">
+			<div class="item-title">Banff International Workshop in Jazz & Creative Music</div>
+			<div class="item-subtitle">
+				August 2016. Alberta, Canada.
+			</div>
+			<div class="item-details">
+				Received travel grant from the Performers' Trust Foundation (Phonographic Performance Company of Australia) to participate.
+			</div>
+		</div>
+		<div class="item sticky">
+			<div class="item-title">Double Degree: <br>Bachelor of Music (Performance) / Bachelor of Commerce (Finance)</div>
+			<div class="item-subtitle">
+				Monash University, Australia
+			</div>
+			<div class="item-details">
+				<i>Finalist: 2015 Jazz Composition Prize<br>
+				Dean's Recognition Award 2014 - Outstanding Academic Results</i>
+			</div>
+		</div>
+	</div>
+</div>
