--- a/themes/artistsite/pages/about.htm
+++ b/themes/artistsite/pages/about.htm
@@ -6,12 +6,12 @@ is_hidden = 0
 <div class="img-span">
 	<img src="storage/app/media/Surface-0023_LRes.jpg" class="img-span-img" />
 </div>
-<div class="top-layer">
+<div class="about--layer">
 	<div class="banner">
 		How I Work
 	</div>
 	<div class="container container-horizontal">
-		<div class="item sticky">
+		<div class="item about--item sticky">
 			<div class="item-title">Audio Engineer</div>
 			<div class="item-details">
 				<ul>
@@ -24,7 +24,7 @@ is_hidden = 0
 				</ul>
 			</div>
 		</div>
-		<div class="item sticky">
+		<div class="item about--item sticky">
 			<div class="item-title">Web Developer</div>
 			<div class="item-details">
 				<ul>
@@ -43,21 +43,21 @@ is_hidden = 0
 		Projects
 	</div>
 	<div class="container container-horizontal">
-		<div class="item sticky">
+		<div class="item about--item sticky">
 			<div class="item-title">Polyphonic Harmonizer</div>
 			<div class="item-subtitle">#Pure Data #SuperCollider</div>
 			<div class="item-details">
 				<i>'The Sextone'</i> - realtime, polyphonic harmonizer keyboard. Transpose incoming audio from any sound source - voice, strings, clarinet, piano, etc. Based on Miller Puckette's [sigmund~] object, the 20 strongest partials of the audio are tracked in Pd and fed to SuperCollider for transposition and resynthesis.
 			</div>
 		</div>
-		<div class="item sticky">
+		<div class="item about--item sticky">
 			<div class="item-title">Electric Sheep Textural Synthesizer</div>
 			<div class="item-subtitle">#Max #Novation Launchpad #MIDI Fighter Twister</div>
 			<div class="item-details">
 				This was my project during my Honours year at Monash University. Generate sustained, evolving textural sounds and save 'memories' to grid buttons for easy recall and interpolation.
 			</div>
 		</div>
-		<div class="item sticky item-wide">
+		<div class="item about--item__wide sticky">
 			<div class="item-title">Open Source Busking Rig</div>
 			<div class="item-subtitle">#Pure Data #ZynAddSubFX #JACK</div>
 			<div class="item-details">
@@ -69,7 +69,7 @@ is_hidden = 0
 		Education
 	</div>
 	<div class="container container-horizontal">
-		<div class="item sticky">
+		<div class="item about--item sticky">
 			<div class="item-title">Bachelor of Creative Music Technology (Honours Year)</div>
 			<div class="item-subtitle">
 				Monash University, Australia
@@ -80,7 +80,7 @@ is_hidden = 0
 				<b>Push, Twist & Touch:</b> Mapping Systems for Live Performance
 			</div>
 		</div>
-		<div class="item sticky">
+		<div class="item about--item sticky">
 			<div class="item-title">CS50x: Introduction to Computer Science</div>
 			<div class="item-subtitle">
 				Harvard University via EdX Online 
@@ -89,7 +89,7 @@ is_hidden = 0
 				Studied the fundamentals of C, Python, SQL & Javascript.
 			</div>
 		</div>
-		<div class="item sticky">
+		<div class="item about--item sticky">
 			<div class="item-title">Banff International Workshop in Jazz & Creative Music</div>
 			<div class="item-subtitle">
 				August 2016. Alberta, Canada.
@@ -98,7 +98,7 @@ is_hidden = 0
 				Received travel grant from the Performers' Trust Foundation (Phonographic Performance Company of Australia) to participate.
 			</div>
 		</div>
-		<div class="item sticky">
+		<div class="item about--item sticky">
 			<div class="item-title">Double Degree: <br>Bachelor of Music (Performance) / Bachelor of Commerce (Finance)</div>
 			<div class="item-subtitle">
 				Monash University, Australia
