--- a/themes/artistsite/pages/artistsites.htm
+++ b/themes/artistsite/pages/artistsites.htm
@@ -15,8 +15,7 @@ is_hidden = 0
 <div class="subheading" style="margin: 50px 0 50px 0">
 	Update your gig list from <b>anywhere</b> with Google Calendar.
 </div>
-<div class="container container-horizontal">
-	<div class="container container-halfWidth" style="justify-content: flex-end">
+<div class="container container-horizontal" style="justify-content: center">
 		<div class="standard-text"> 
 		A typical entry includes:
 		<ul style="padding: 20px">
@@ -26,18 +25,15 @@ is_hidden = 0
 			<li>Optional description with further details</li>
 		</ul>
 		</div>
-	</div>
-	<div class="container container-halfWidth" style="justify-content: flex-start">
-		<div class="item" style="flex-basis: auto">
+		<div class="item sticky force-word-wrap" style="max-width: 350px">
 			<div class="item-title">Cam Sexton Sextet</div>
-			<div class="details force-word-wrap">
+			<div class="item-details">
 				Wed May 09 at 8:00pm<br>
 				London O2 Arena<br>
 				My band will be busking out the front of the arena. Please come.<br>
 				<a href="http://www.google.com">Tickets</a>
 			</div>
 		</div>
-	</div>
 
 </div>
 {% partial "divider" %}
