redevelop contact form

--- a/themes/artistsite/pages/artistsites.htm
+++ b/themes/artistsite/pages/artistsites.htm
@@ -1,5 +1,5 @@
 title = "artistsites"
-url = "/artistsites"
+url = "/web"
 layout = "base-wide"
 is_hidden = 0
 ==
@@ -15,12 +15,12 @@ is_hidden = 0
 	<div class="AS--heading AS--heading-wrapper">
 		Update your gigs from <b>anywhere</b> with Google Calendar.
 	</div>
-	<div class="AS--spacer-25"></div>
-	<div class="container container-horizontal" style="justify-content: center">
+	<div class="spacer-25"></div>
+	<div class="container container-centered">
 			<div class="AS--text-box" style="max-width: 400px"> 
 				Sync your calendar to automatically display upcoming shows in a neatly formatted list: 
 			</div>
-			<div class="AS--spacer-25"></div>
+			<div class="spacer-25"></div>
 			<div class="item sticky force-word-wrap" style="max-width: 400px">
 				<div class="item-title">Your Band</div>
 				<div class="item-details">
@@ -32,28 +32,28 @@ is_hidden = 0
 			</div>
 
 	</div>
-	<div class="AS--spacer-50"></div>
+	<div class="spacer-50"></div>
 	{% partial "divider" %}
-	<div class="AS--spacer-50"></div>
+	<div class="spacer-50"></div>
 	<a class="AS--logo" href="https://octobercms.com/"><img class="AS--logo-img" src="storage/app/media/october-logo-transparent.svg"></img></a>
 	<div class="AS--heading AS--heading-wrapper">
 		A <b>modern</b> and <b>simple</b> content manager for your website.
 	</div>
-	<div class="AS--spacer-50"></div>
+	<div class="spacer-50"></div>
 	{% partial "divider" %}
-	<div class="AS--spacer-50"></div>
+	<div class="spacer-50"></div>
 	<div class="AS--logo" href="https://octobercms.com/"><img class="AS--logo-img" src="storage/app/media/RWD.svg"></img></div>
 	<div class="AS--heading AS--heading-wrapper">
 		<b>Responsive</b> Design:<br> your site optimized for <b>every</b> device.
 	</div>
-	<div class="AS--spacer-50"></div>
+	<div class="spacer-50"></div>
 	{% partial "divider" %}
 	<div class="container container-centered">
 		<div class="AS--item">
 			<div class="AS--heading AS--heading-wrapper">
 				<b>Costs</b> Outline:
 			</div>
-			<div class="AS--spacer-25"></div>
+			<div class="spacer-25"></div>
 			<div class="AS--text-box" style="max-width: 500px; margin: 0 auto;">
 				<ul>
 					<li>- Domain registration (in your name).</li>
@@ -63,9 +63,9 @@ is_hidden = 0
 		</div>
 		<div class="AS--item"> 
 			<div class="AS--heading AS--heading-wrapper">
-				<b>Support</b>:
+				Included <b>Support</b>:
 			</div>
-			<div class="AS--spacer-25"></div>
+			<div class="spacer-25"></div>
 			<div class="AS--text-box" style="max-width: 500px; margin: 0 auto;">
 				<ul>
 					<li>- My help and advice at every step in the process to getting your site online.</li>
