improve contact form

--- a/themes/artistsite/pages/contact.htm
+++ b/themes/artistsite/pages/contact.htm
@@ -6,11 +6,10 @@ is_hidden = 0
 [contactform]
 ==
 <div class="spacer-50"></div>
-<div class="AS--heading-top">What can I <b>do</b> for you?</div>
-<div class="spacer-50"></div>
-<div class="buttons-array">
+<div class="CT--heading-top">What can I <b>do</b> for you?</div>
+<div class="CT--buttons-array">
 	<div id="web">Website Quote</div>
-	<div id="audio">Recording/Mixing</div>
+	<div id="audio">Recording/<wbr>Mixing</div>
 	<div id="gig">Live Performance</div>
 	<div id="other">Other</div>
 </div>
