update contact form animation

--- a/themes/artistsite/pages/contact.htm
+++ b/themes/artistsite/pages/contact.htm
@@ -6,17 +6,16 @@ is_hidden = 0
 [contactform]
 ==
 <div class="spacer-50"></div>
-<div class="CT--heading-top">What can I <b>do</b> for you?</div>
-<div class="CT--buttons-array">
-	<div id="web">Website Quote</div>
-	<div id="audio">Recording/<wbr>Mixing</div>
-	<div id="gig">Live Performance</div>
-	<div id="other">Other</div>
-</div>
-<div id="option" class="secret">
-</div>
-<div class="container container-centered">
-{% component 'contactform' %}
+<div class="container container-vertical-centered">
+	<div class="CT--heading-top">What can I <b>do</b> for you?</div>
+	<div class="CT--buttons-array">
+		<div id="web">Website Quote</div>
+		<div id="audio">Recording/<wbr>Mixing</div>
+		<div id="gig">Live Performance</div>
+		<div id="other">Other</div>
+	</div>
+	<div id="option" class="secret"></div>
+	{% component 'contactform' %}
 </div>
 <div class="spacer-50"></div>
 <div class="spacer-50"></div>
