add about page link to research

--- a/themes/artistsite/pages/about.htm
+++ b/themes/artistsite/pages/about.htm
@@ -77,7 +77,8 @@ is_hidden = 0
 			<div class="item-details">
 				<i>Ernst Morawetz Prize for Best Honours Student in Ethnomusicology & Musicology</i><br><br>
 				Research thesis:<br>
-				<b>Push, Twist & Touch:</b> Mapping Systems for Live Performance
+				<b>Push, Twist & Touch:</b> Mapping Systems for Live Performance<br>
+				<a class="item-link" href="{{navlinks.research}}">Read it</a>
 			</div>
 		</div>
 		<div class="item about--item sticky">
