change front page links

--- a/themes/artistsite/pages/home.htm
+++ b/themes/artistsite/pages/home.htm
@@ -9,8 +9,8 @@ is_hidden = 0
 	<h1>Musician | Developer</h1>
 <div>
 	<!--<a href="{{ navlinks.artistsites }}">Get Started &#8594</a>-->
-	<a href="{{ navlinks.github }}">free code</a>
-	<a href="{{ navlinks.artistsites }}">web design</a>
+	<a href="{{ navlinks.portfolio }}">portfolio</a>
+	<a href="{{ navlinks.artistsites }}">artist sites</a>
 	<a href="{{ navlinks.contact }}">get in touch</a>
 </div>
 	<br>
