--- a/themes/artistsite/pages/portfolio.htm
+++ b/themes/artistsite/pages/portfolio.htm
@@ -11,3 +11,13 @@ is_hidden = 0
 </div>
 {% partial 'spacer' %}
 {% component 'portfoliogallery' %}
+<div class="portfolio">
+	<div class="sample">
+		<p data-height="300" data-theme-id="0" data-slug-hash="QxBZdE" data-default-tab="result" data-user="ctsexton" data-embed-version="2" data-pen-title="Roman Numeral Converter" class="codepen">See the Pen <a href="https://codepen.io/ctsexton/pen/QxBZdE/">Roman Numeral Converter</a> by Cam Sexton (<a href="https://codepen.io/ctsexton">@ctsexton</a>) on <a href="https://codepen.io">CodePen</a>.</p>
+<script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+		<div class="sample--text">
+			<div class="sample--title">Converter</div>
+		Uses a recursive javascript function to convert from decimals to roman numerals, and an Array.reduce method to go back in the other direction.
+		</div>
+	</div>
+</div>
