add banner heading to research page

--- a/themes/artistsite/pages/research.htm
+++ b/themes/artistsite/pages/research.htm
@@ -4,6 +4,7 @@ layout = "base-wide"
 description = "My writing and research on music technology."
 is_hidden = 0
 ==
+<div class="banner">Research</div>
 {% partial 'spacer' %}
 <div class="container container-vertical container-gutter">
 	<div class="item research--item item-centered sticky force-word-wrap">
