remove old pages, add banners to improve consistency

--- a/themes/artistsite/pages/artistsites.htm
+++ b/themes/artistsite/pages/artistsites.htm
@@ -3,6 +3,9 @@ url = "/web"
 layout = "base-wide"
 is_hidden = 0
 ==
+<div class="banner">
+	Artist Sites
+</div>
 <div id="AS--content-wrapper">
 	<div class="AS--spacer-top"></div>
 	<div class="AS--heading-top AS--heading-wrapper">
