--- a/themes/artistsite/pages/contact.htm
+++ b/themes/artistsite/pages/contact.htm
@@ -5,6 +5,9 @@ is_hidden = 0
 
 [contactform]
 ==
+<div class="banner">
+	Contact Me
+</div>
 <div class="spacer-50"></div>
 <div class="container container-vertical-centered">
 	<div class="CT--heading-top">What can I <b>do</b> for you?</div>
